--- a/PY/DOC/OPYM/13/07/MAN/03/32/32.MD
+++ b/PY/DOC/OPYM/13/07/MAN/03/32/32.MD
@@ -77,15 +77,21 @@ WHILE LOOPS
 ---
 
 ```python
+#we have a list with 4 elements
 sqrs = ["orange", "orange", "purple", "blue"]
 
+#create a new list
 new_sqrs = []
+#starts from 0
 i = 0
 
+#while elements equals orange
 while (sqrs[i]=="orange"):
+  #copy the mentioned element to the new list
   new_sqrs.append(sqrs[i])
-
   i = i+1
+
+#print out the result
 print(new_sqrs)
 
 >>>
