--- a/PY/DOC/OPYM/13/07/MAN/03/33/33.MD
+++ b/PY/DOC/OPYM/13/07/MAN/03/33/33.MD
@@ -3,7 +3,7 @@
 
 ###### [改善](https://github.com/ttltrk/0C/blob/master/README.MD) - [.co.](https://github.com/ttltrk/PRG/blob/master/CODING.MD) - [manuals](https://github.com/ttltrk/PRG/blob/master/MAN.MD) - [basic manuals](https://github.com/ttltrk/PRG/blob/master/MANUALS.MD) - [Scripts](https://github.com/ttltrk/PRG/blob/master/PY/DOC/SC/SC.MD) - [Python](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/OPYM.MD) - [Courses](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/COURSES.MD) - [Cognitive Class](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/CC.MD) - [Python for Data Science](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/MAN/MAN.MD) - [Python Programming Fundamentals](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/MAN/03/03.MD)
 
-###### [PYMAN Functions](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/04_MET_FUN/MET_FUN.MD)
+###### [PYMAN - Functions](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/04_MET_FUN/MET_FUN.MD)
 ---
 
 ### Functions
