--- a/PY/DOC/OPYM/13/07/MAN/03/33/33.MD
+++ b/PY/DOC/OPYM/13/07/MAN/03/33/33.MD
@@ -10,10 +10,81 @@
 
 ---
 
+Built in functions
+
+---
+
+len()
+
 ```python
+#we have a list with 4 elements
+sqrs = ["orange", "orange", "purple", "blue"]
+
+#count the elements of the list
+print(len(sqrs))
 
 >>>
+4
+>>>
+```
 
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+sum()
+
+```python
+#create a list with 9 elements
+abc = [1,2,3,4,5,6,7,8,9]
+
+#sum the elements of the list
+print(sum(abc))
+
+>>>
+45
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+sorted()
+
+```python
+#create a list with 9 elements
+abc = [1,2,6,4,8,3,7,5,9]
+
+#print out the list
+print(abc)
+
+#print out the list with sorted function
+print(sorted(abc))
+
+>>>
+[1, 2, 6, 4, 8, 3, 7, 5, 9]
+[1, 2, 3, 4, 5, 6, 7, 8, 9]
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+Own Functions
+
+---
+
+```python
+def add1(a):
+  b = a+1
+  return b
+
+print(add1(10))
+
+>>>
+11
 >>>
 ```
 
