--- a/PY/DOC/OPYM/13/07/MAN/03/33/33.MD
+++ b/PY/DOC/OPYM/13/07/MAN/03/33/33.MD
@@ -93,6 +93,60 @@ print(add1(10))
 ---
 
 ```python
+def mult(a,b):
+  c = a*b
+  return c
+
+print(mult(10,3))
+
+>>>
+30
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+def mult(a,b):
+  c = a*b
+  return c
+
+print(mult("MJ ",3))
+
+>>>
+MJ MJ MJ
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
 
 >>>
 
