--- a/PY/DOC/OPYM/13/07/MAN/03/33/33.MD
+++ b/PY/DOC/OPYM/13/07/MAN/03/33/33.MD
@@ -125,31 +125,19 @@ MJ MJ MJ
 ---
 
 ```python
+def printStuff(Stuff):
+  for i,s in enumerate(Stuff):
+    print("Album", i ,"Rating is", s)
+
+album_rating = [10.5, 9, 3, 9.9]
+
+print(printStuff(album_rating))
 
 >>>
-
->>>
-```
-
-* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
-
----
-
-```python
-
->>>
-
->>>
-```
-
-* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
-
----
-
-```python
-
->>>
-
+('Album', 0, 'Rating is', 10.5)
+('Album', 1, 'Rating is', 9)
+('Album', 2, 'Rating is', 3)
+('Album', 3, 'Rating is', 9.9)
 >>>
 ```
 
@@ -158,9 +146,16 @@ MJ MJ MJ
 ---
 
 ```python
+def ArtisNames(*names):
+  for name in names:
+    print(name)
+
+ArtisNames("Michael Jackson", "Pink Floyd", "AC/DC")
 
 >>>
-
+Michael Jackson
+Pink Floyd
+AC/DC
 >>>
 ```
 
