--- a/PY/DOC/OPYM/13/07/MAN/03/34/34.MD
+++ b/PY/DOC/OPYM/13/07/MAN/03/34/34.MD
@@ -4,6 +4,7 @@
 ###### [改善](https://github.com/ttltrk/0C/blob/master/README.MD) - [.co.](https://github.com/ttltrk/PRG/blob/master/CODING.MD) - [manuals](https://github.com/ttltrk/PRG/blob/master/MAN.MD) - [basic manuals](https://github.com/ttltrk/PRG/blob/master/MANUALS.MD) - [Scripts](https://github.com/ttltrk/PRG/blob/master/PY/DOC/SC/SC.MD) - [Python](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/OPYM.MD) - [Courses](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/COURSES.MD) - [Cognitive Class](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/CC.MD) - [Python for Data Science](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/MAN/MAN.MD) - [Python Programming Fundamentals](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/MAN/03/03.MD)
 
 ###### [PYMAN - OOP](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/05_OOP/OOP.MD)
+###### [Objects and Data Structures](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/01_OBJ_DS/OBJ_DS.MD)
 
 ---
 
@@ -11,10 +12,58 @@
 
 ---
 
+You can find the type of a object by using the cmd ```type()``` 
+
 ```python
+print(type(5))
+print(type(10.1))
+print(type("hey yo"))
+print(type(True))
+print(type((1, 2, 3, 4, 5)))
+print(type([1,2,3]))
+print(type({"a":1}))
 
 >>>
+<type 'int'>
+<type 'float'>
+<type 'str'>
+<type 'bool'>
+<type 'tuple'>
+<type 'list'>
+<type 'dict'>
+>>>
+```
 
+---
+
+sort() function
+
+```python
+a = [5, 2, 3, 1, 4, 6, 7, 5, 6, 7]
+a.sort()
+print(a)
+
+>>>
+[1, 2, 3, 4, 5, 5, 6, 6, 7, 7]
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+reverse() function
+
+```python
+a = [5, 2, 3, 1, 4, 6, 7, 5, 6, 7]
+a.sort()
+print(a)
+a.reverse()
+print(a)
+
+>>>
+[1, 2, 3, 4, 5, 5, 6, 6, 7, 7]
+[7, 7, 6, 6, 5, 5, 4, 3, 2, 1]
 >>>
 ```
 
@@ -43,3 +92,26 @@
 * [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
 
 ---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
