--- a/PY/DOC/OPYM/13/07/MAN/04/04.MD
+++ b/PY/DOC/OPYM/13/07/MAN/04/04.MD
@@ -8,3 +8,10 @@
 ### Working with Data in Python
 
 ---
+
+* [04.01 - Reading files with open]()
+* [04.02 - Writing files with open]()
+* [04.03 - Loading data with pandas]()
+* [04.04 - Working and saving data with Pandas]()
+
+---
