--- a/PY/DOC/OPYM/13/07/MAN/04/04.MD
+++ b/PY/DOC/OPYM/13/07/MAN/04/04.MD
@@ -9,9 +9,9 @@
 
 ---
 
-* [4.1 - Reading files with open]()
-* [4.2 - Writing files with open]()
-* [4.3 - Loading data with pandas]()
-* [4.4 - Working and saving data with Pandas]()
+* [4.1 - Reading files with open](https://github.com/ttltrk/PRG/edit/blob/PY/DOC/OPYM/13/07/MAN/04/01/01.MD)
+* [4.2 - Writing files with open](https://github.com/ttltrk/PRG/edit/blob/PY/DOC/OPYM/13/07/MAN/04/02/02.MD)
+* [4.3 - Loading data with pandas](https://github.com/ttltrk/PRG/edit/blob/PY/DOC/OPYM/13/07/MAN/04/03/03.MD)
+* [4.4 - Working and saving data with Pandas](https://github.com/ttltrk/PRG/edit/blob/PY/DOC/OPYM/13/07/MAN/04/04/04.MD)
 
 ---
