--- a/PY/DOC/OPYM/13/07/MAN/04/04/04.MD
+++ b/PY/DOC/OPYM/13/07/MAN/04/04/04.MD
@@ -5,6 +5,51 @@
 
 ---
 
-### 04
+### Working and saving data with Pandas
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
 
 ---
