--- a/PY/DOC/OPYM/13/07/MAN/04/03/03.MD
+++ b/PY/DOC/OPYM/13/07/MAN/04/03/03.MD
@@ -8,3 +8,48 @@
 ### Loading data with pandas
 
 ---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
