--- a/PY/DOC/OPYM/13/07/MAN/04/02/02.MD
+++ b/PY/DOC/OPYM/13/07/MAN/04/02/02.MD
@@ -8,3 +8,48 @@
 ### Writing files with open
 
 ---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
