--- a/PY/DOC/OPYM/13/07/MAN/04/01/01.MD
+++ b/PY/DOC/OPYM/13/07/MAN/04/01/01.MD
@@ -8,3 +8,48 @@
 ### Reading files with open
 
 ---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
