--- a/PY/DOC/OPYM/13/07/MAN/04/01/01.MD
+++ b/PY/DOC/OPYM/13/07/MAN/04/01/01.MD
@@ -10,46 +10,71 @@
 ---
 
 ```python
+file1 = open("file/pat/file1.txt","w")
+```
+
+```python
+file1.name
 
 >>>
+"file/pat/file1.txt"
+>>>
+```
 
+```python
+file1.mode
+
+>>>
+"w"
 >>>
 ```
 
 ---
 
 ```python
+with open("file/pat/file1.txt","w") as file1:
+  file_stuff = file1.read()
+  print(file_stuff)
+  
+print(file1.closed)
+print(file_stuff)
+```
+
+---
+
+```python
+print(file_stuff)
 
 >>>
-
+this is 1st line
+this is 2nd line
+this is 3rd line
 >>>
 ```
 
 ---
 
 ```python
+file_stuff = file1.readlines()
+print(file_stuff)
 
 >>>
-
->>>
-```
-
----
-
-```python
-
+"this is 1st line \n", "this is 2nd line \n", "this is 3rd line"
 >>>
 
->>>
-```
-
----
-
-```python
+file_stuff[0]
 
 >>>
+this is 1st line
+>>>
+
+file_stuff[1]
 
 >>>
+this is 2nd line
+>>>
+
+
 ```
 
 ---
