--- a/PY/DOC/OPYM/13/07/MAN/04/02/02.MD
+++ b/PY/DOC/OPYM/13/07/MAN/04/02/02.MD
@@ -10,6 +10,10 @@
 ---
 
 ```python
+with open("path/file/file1.txt","w") as file1:
+
+file1.write("this is line A \n")
+file1.write("this is line B \n")
 
 >>>
 
@@ -19,6 +23,11 @@
 ---
 
 ```python
+Lines = ["this is line A \n", "this is line B \n", "this is line C \n"]
+
+with open("path/file/file1.txt","w") as file1:
+  for line in Lines:
+    file1.write(line)
 
 >>>
 
@@ -27,26 +36,12 @@
 
 ---
 
-```python
-
->>>
-
->>>
-```
-
----
+Append
 
 ```python
+with open("path/file/file1.txt","a") as file1:
 
->>>
-
->>>
-```
-
----
-
-```python
-
+file1.write("this is line C \n")
 >>>
 
 >>>
