--- a/JAVA/DOC/SL/01/01.MD
+++ b/JAVA/DOC/SL/01/01.MD
@@ -9,13 +9,13 @@
 
 ---
 
-* [01.01 - Intro]
-* [01.02 - Hello World]
-* [01.03 - Java Comments]
-* [01.04 - Variables]
-* [01.05 - Primitive Operators]
-* [01.06 - Increment and Decrement]
-* [01.07 - Strings]
-* [01.08 - Getting User Input]
+* [01.01 - Intro]()
+* [01.02 - Hello World]()
+* [01.03 - Java Comments]()
+* [01.04 - Variables]()
+* [01.05 - Primitive Operators]()
+* [01.06 - Increment and Decrement]()
+* [01.07 - Strings]()
+* [01.08 - Getting User Input]()
 
 ---
