--- a/JAVA/DOC/SL/01/01.MD
+++ b/JAVA/DOC/SL/01/01.MD
@@ -9,13 +9,13 @@
 
 ---
 
-* [01.01 - Intro]()
-* [01.02 - Hello World]()
-* [01.03 - Java Comments]()
-* [01.04 - Variables]()
-* [01.05 - Primitive Operators]()
-* [01.06 - Increment and Decrement]()
-* [01.07 - Strings]()
-* [01.08 - Getting User Input]()
+* [01.01 - Intro](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0101/0101.MD)
+* [01.02 - Hello World](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0102/0102.MD)
+* [01.03 - Java Comments](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0103/0103.MD)
+* [01.04 - Variables](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0104/0104.MD)
+* [01.05 - Primitive Operators](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0105/0105.MD)
+* [01.06 - Increment and Decrement](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0106/0106.MD)
+* [01.07 - Strings](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0107/0107.MD)
+* [01.08 - Getting User Input](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0108/0108.MD)
 
 ---
