--- a/JAVA/DOC/SL/01/0105/0105.MD
+++ b/JAVA/DOC/SL/01/0105/0105.MD
@@ -8,3 +8,58 @@
 ### 01.05 - Primitive Operators
 
 ---
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
