--- a/JAVA/DOC/SL/01/0106/0106.MD
+++ b/JAVA/DOC/SL/01/0106/0106.MD
@@ -8,3 +8,58 @@
 ### 01.06 - Increment and Decrement
 
 ---
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
