--- a/JAVA/DOC/SL/01/0107/0107.MD
+++ b/JAVA/DOC/SL/01/0107/0107.MD
@@ -8,3 +8,58 @@
 ### 01.07 - Strings
 
 ---
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
