--- a/JAVA/DOC/SL/01/0101/0101.MD
+++ b/JAVA/DOC/SL/01/0101/0101.MD
@@ -9,57 +9,23 @@
 
 ---
 
-```java
+Java is a high level, modern programming language designed in the early 1990s by Sun Microsystems, 
+and currently owned by Oracle. 
 
->>>
+Java is Platform Independent, which means that you only need to write the program once 
+to be able to run it on a number of different platforms!
 
->>>
-```
+Java is portable, robust, and dynamic, with the ability to fit the needs of virtually 
+any type of application.
 
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+Java guarantees that you'll be able to Write Once, Run Anywhere.
 
 ---
 
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+More than 3 billion devices run Java. 
+Java is used to develop apps for Google's Android OS, various Desktop Applications, 
+such as media players, antivirus programs, Web Applications, 
+Enterprise Applications (i.e. banking), and many more!
 
 ---
 
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
