--- a/JAVA/DOC/SL/01/0102/0102.MD
+++ b/JAVA/DOC/SL/01/0102/0102.MD
@@ -10,20 +10,14 @@
 ---
 
 ```java
+public class MyClass {
+  public static void main(String[ ] args) {
+    System.out.println("Hello World");
+  }
+}
 
 >>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
+Hello World
 >>>
 ```
 
@@ -31,35 +25,17 @@
 
 ---
 
-```java
+In Java, every line of code that can actually run needs to be inside a class.
+In our example, we named the class MyClass. You will learn more about classes 
+in the upcoming modules.
 
->>>
+In Java, each application has an entry point, or a starting point, 
+which is a method called main. Along with main, the keywords public 
+and static will also be explained later. 
 
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+>As a summary:
+>- Every program in Java must have a class.
+>- Every Java program starts from the main method.
 
 ---
 
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
