--- a/JAVA/DOC/SL/01/0102/0102.MD
+++ b/JAVA/DOC/SL/01/0102/0102.MD
@@ -36,8 +36,8 @@ and static will also be explained later.
 ---
 
 >As a summary:
->- Every program in Java must have a class.
->- Every Java program starts from the main method.
+>- Every program in Java must have a **class**.
+>- Every Java program starts from the **main** method.
 
 ---
 
