--- a/JAVA/DOC/SL/01/0102/0102.MD
+++ b/JAVA/DOC/SL/01/0102/0102.MD
@@ -9,6 +9,8 @@
 
 ---
 
+1. Your First Java Program
+
 ```java
 public class MyClass {
   public static void main(String[ ] args) {
@@ -22,8 +24,6 @@ Hello World
 ```
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
 
 In Java, every line of code that can actually run needs to be inside a class.
 In our example, we named the class MyClass. You will learn more about classes 
@@ -41,3 +41,10 @@ and static will also be explained later.
 
 ---
 
+2. The main Method
+
+```java
+public static void main(String[ ] args)
+```
+
+---
