--- a/JAVA/DOC/SL/01/0102/0102.MD
+++ b/JAVA/DOC/SL/01/0102/0102.MD
@@ -9,7 +9,7 @@
 
 ---
 
-1. Your First Java Program
+#### 1. Your First Java Program
 
 ```java
 public class MyClass {
@@ -41,7 +41,7 @@ and static will also be explained later.
 
 ---
 
-2. The main Method
+#### 2. The main Method
 
 ```java
 public static void main(String[ ] args)
