--- a/JAVA/DOC/SL/01/0102/010202/010202.MD
+++ b/JAVA/DOC/SL/01/0102/010202/010202.MD
@@ -8,3 +8,23 @@
 ### 01.02.02 - The main Method
 
 ---
+
+```java
+public static void main(String[ ] args)
+```
+
+```java
+- public: anyone can access it
+- static: method can be run without creating an instance of the class containing the main method
+- void: method doesn't return any value
+- main: the name of the method
+```
+
+>The method's parameters are declared inside the parentheses 
+that follow the name of the method. 
+>For main, it's an array of strings called args. 
+We will use it in our next lesson, so don't worry if you don't understand it all now.
+
+---
+
+---
