--- a/JAVA/DOC/SL/01/0102/010203/010203.MD
+++ b/JAVA/DOC/SL/01/0102/010203/010203.MD
@@ -8,3 +8,18 @@
 ### 01.02.03 - System.out.println()
 
 ---
+
+```java
+{
+   System.out.println("Hello World!");
+}
+```
+
+```java
+The println method prints a line of text to the screen.
+The System class and its out stream are used to access the println method.
+```
+
+> In classes, methods, and other flow-control structures code is always enclosed in curly braces { }.
+
+---
