--- a/JAVA/DOC/SL/01/0102/010204/010204.MD
+++ b/JAVA/DOC/SL/01/0102/010204/010204.MD
@@ -8,3 +8,20 @@
 ### 01.02.04 - Semicolons in Java
 
 ---
+
+```java
+class MyClass {
+  public static void main(String[ ] args) {
+    System.out.println("I am learning Java");
+  }
+}
+```
+
+```java
+In Java, each code statement must end with a semicolon.
+
+Remember: do not use semicolons after method and class declarations 
+that follow with the body defined using the curly braces.
+```
+
+---
