--- a/JAVA/DOC/SL/01/0101/0101.MD
+++ b/JAVA/DOC/SL/01/0101/0101.MD
@@ -9,6 +9,11 @@
 
 ---
 
+* [01.01.01 - Welcome to Java](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0101/010101/010101.MD)
+* [01.01.02 - Java](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0101/010102/010102.MD)
+
+---
+
 1.
 
 Java is a high level, modern programming language designed in the early 1990s by Sun Microsystems, 
