--- a/JAVA/DOC/SL/01/0101/010101/010101.MD
+++ b/JAVA/DOC/SL/01/0101/010101/010101.MD
@@ -8,3 +8,17 @@
 ### 01.01.01 - Welcome to Java
 
 ---
+
+Java is a high level, modern programming language designed in the early 1990s by Sun Microsystems, 
+and currently owned by Oracle. 
+
+Java is Platform Independent, which means that you only need to write the program once 
+to be able to run it on a number of different platforms!
+
+Java is portable, robust, and dynamic, with the ability to fit the needs of virtually 
+any type of application.
+
+Java guarantees that you'll be able to Write Once, Run Anywhere.
+
+---
+
