--- a/JAVA/DOC/SL/01/0101/010102/010102.MD
+++ b/JAVA/DOC/SL/01/0101/010102/010102.MD
@@ -8,3 +8,10 @@
 ### 01.01.02 - Java
 
 ---
+
+More than 3 billion devices run Java. 
+Java is used to develop apps for Google's Android OS, various Desktop Applications, 
+such as media players, antivirus programs, Web Applications, 
+Enterprise Applications (i.e. banking), and many more!
+
+---
