--- a/JAVA/DOC/SL/01/0103/0103.MD
+++ b/JAVA/DOC/SL/01/0103/0103.MD
@@ -9,9 +9,9 @@
 
 ---
 
-* [01.03.01 - Comments]()
-* [01.03.02 - Multi-Line Comments]()
-* [01.03.03 - Documentation Comments]()
+* [01.03.01 - Comments](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0103/010301/010301.MD)
+* [01.03.02 - Multi-Line Comments](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0103/010302/010302.MD)
+* [01.03.03 - Documentation Comments](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0103/010303/010303.MD)
 
 ---
 
