--- a/JAVA/DOC/SL/01/0103/010301/010301.MD
+++ b/JAVA/DOC/SL/01/0103/010301/010301.MD
@@ -10,6 +10,17 @@
 ---
 
 ```java
+The purpose of including comments in your code is to explain what the code is doing.
+Java supports both single and multi-line comments. All characters that appear within 
+a comment are ignored by the Java compiler.
+
+A single-line comment starts with two forward slashes and continues until it reaches the end of the line. 
+```
+---
+
+```java
+// this is a single-line comment
+x = 5; // a single-line comment after code
 
 >>>
 
@@ -21,45 +32,9 @@
 ---
 
 ```java
-
->>>
-
->>>
+Adding comments as you write code is a good practice, because they provide clarification 
+and understanding when you need to refer back to it, as well as for others who might need to read it.
 ```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
 
 ---
 
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
