--- a/JAVA/DOC/SL/01/0103/010302/010302.MD
+++ b/JAVA/DOC/SL/01/0103/010302/010302.MD
@@ -9,10 +9,19 @@
 
 ---
 
+```
+Java also supports comments that span multiple lines.
+You start this type of comment with a forward slash followed by an asterisk, 
+and end it with an asterisk followed by a forward slash. 
+```
+
 ---
 
 ```java
-
+/*  This is also a
+    comment spanning
+    multiple lines */
+    
 >>>
 
 >>>
@@ -22,8 +31,18 @@
 
 ---
 
-```java
+```
+Note that Java does not support nested multi-line comments. 
+However, you can nest single-line comments within multi-line comments.
+```
 
+```java
+/* This is a single-line comment:
+
+    // a single-line comment
+
+ */
+ 
 >>>
 
 >>>
@@ -33,35 +52,3 @@
 
 ---
 
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
