--- a/JAVA/DOC/SL/01/0103/010303/010303.MD
+++ b/JAVA/DOC/SL/01/0103/010303/010303.MD
@@ -9,10 +9,19 @@
 
 ---
 
----
+```
+Documentation comments are special comments that have the appearance of multi-line comments, 
+with the difference being that they generate external documentation of your source code. 
+These begin with a forward slash followed by two asterisks, and end with an asterisk 
+followed by a forward slash. 
+```
 
 ```java
+/** This is a documentation comment */
 
+/** This is also a
+    documentation comment */
+    
 >>>
 
 >>>
@@ -22,7 +31,22 @@
 
 ---
 
+```
+Javadoc is a tool which comes with JDK and it is used for generating Java code 
+documentation in HTML format from Java source code which has required documentation 
+in a predefined format.
+
+When a documentation comment begins with more than two asterisks, 
+Javadoc assumes that you want to create a "box" around the comment in the source code. 
+It simply ignores the extra asterisks.
+```
+
 ```java
+/**********************
+
+This is the start of a method
+
+***********************/
 
 >>>
 
@@ -31,37 +55,9 @@
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
 
----
-
-```java
-
->>>
-
->>>
+```
+This will retain just the text "This is the start of a method" for the documentation.
 ```
 
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
 ---
 
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
