--- a/JAVA/DOC/SL/01/0104/0104.MD
+++ b/JAVA/DOC/SL/01/0104/0104.MD
@@ -9,6 +9,11 @@
 
 ---
 
+* [01.04.01 - Variables 1](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0104/010401/010401.MD)
+* [01.04.02 - Variables 2](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0104/010402/010402.MD)
+
+---
+
 ```java
 
 >>>
