--- a/JAVA/DOC/SL/01/0104/010402/010402.MD
+++ b/JAVA/DOC/SL/01/0104/010402/010402.MD
@@ -8,3 +8,49 @@
 ### 01.04.02 - Variables 2
 
 ---
+
+```java
+public class MyClass {
+  public static void main(String[ ] args) {
+    
+    String name ="David";
+    int age = 42;
+    double score =15.9;
+    char group = 'Z';
+    
+    System.out.println(name);
+    System.out.println(age);
+    System.out.println(score);
+    System.out.println(group);
+    
+  }
+}
+
+>>>
+David
+42
+15.9
+Z
+>>>
+```
+
+---
+
+```
+char stands for character and holds a single character.
+
+Another type is the Boolean type, which has only two possible values: true and false.
+This data type is used for simple flags that track true/false conditions.
+```
+
+```java
+boolean online = true;
+```
+
+```java
+You can use a comma-separated list to declare more than one variable of the specified type. 
+
+Example: int a = 42, b = 11;
+```
+
+---
