--- a/JAVA/DOC/SL/01/0105/010501/010501.MD
+++ b/JAVA/DOC/SL/01/0105/010501/010501.MD
@@ -5,6 +5,32 @@
 
 ---  
 
-### 01.05.01 - 
+### 01.05.01 - The Math Operators
+
+---
+
+```java
+Java provides a rich set of operators to use in manipulating variables. 
+A value used on either side of an operator is called an operand. 
+For example, in the expression below, the numbers 6 and 3 are operands 
+of the plus operator:
+
+int x = 6 + 3;
+```
+
+```java
+Java arithmetic operators: 
+
++ addition
+- subtraction
+* multiplication
+/ division
+% modulo
+```
+
+```
+Arithmetic operators are used in mathematical expressions 
+in the same way that they are used in algebraic equations.
+```
 
 ---
