--- a/JAVA/DOC/SL/01/0105/010502/010502.MD
+++ b/JAVA/DOC/SL/01/0105/010502/010502.MD
@@ -1,10 +1,34 @@
-
+```
 ---
 
 ###### [改善](https://github.com/ttltrk/0C/blob/master/README.MD) - [.co.](https://github.com/ttltrk/PRG/blob/master/CODING.MD) - [manuals](https://github.com/ttltrk/PRG/blob/master/MAN.MD) - [basic manuals](https://github.com/ttltrk/PRG/blob/master/MANUALS.MD) - [Java Tech](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/JT/JT.MD) - [Java](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/OJM/OJM.MD) - [courses](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/CM/JT.MD) - [Sololearn](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/SL.MD) - [Basic Concepts](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/01.MD) - [Primitive Operators](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0105/0105.MD)
 
 ---  
 
-### 01.05.02 - Addition
+### 01.05.02 - Addition and Subtraction
 
+---
+
+Addition
+
+```java
+The + operator adds together two values, such as two constants, 
+a constant and a variable, or a variable and a variable.
+
+int sum1 = 50 + 10; 
+int sum2 = sum1 + 66; 
+int sum3 = sum2 + sum2;
+```
+
+---
+
+Subtraction
+
+```java
+The - operator subtracts one value from another.
+
+int sum1 = 1000 - 10;
+int sum2 = sum1 - 5;
+int sum3 = sum1 - sum2;
+```
 ---
