--- a/JAVA/DOC/SL/01/0105/0105.MD
+++ b/JAVA/DOC/SL/01/0105/0105.MD
@@ -11,7 +11,7 @@
 
 * [01.05.01 - The Math Operators](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0105/010501/010501.MD)
 * [01.05.02 - Addition and Subtraction](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0105/010502/010502.MD)
-* [01.05.03 - Multiplication](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0105/010503/010503.MD)
+* [01.05.03 - Multiplication and Division](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0105/010503/010503.MD)
 * [01.05.04 - Modulo](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0105/010504/010504.MD)
 
 ---
