--- a/JAVA/DOC/SL/01/0105/010503/010503.MD
+++ b/JAVA/DOC/SL/01/0105/010503/010503.MD
@@ -5,6 +5,36 @@
 
 ---  
 
-### 01.05.03 - Multiplication
+### 01.05.03 - Multiplication and Division
+
+---
+
+Multiplication
+
+```java
+The * operator multiplies two values.
+
+int sum1 = 1000 * 2;
+int sum2 = sum1 * 10;
+int sum3 = sum1 * sum2;
+```
+
+---
+
+Division
+
+```java
+The / operator divides one value by another.
+
+int sum1 = 1000 / 5;
+int sum2 = sum1 / 2;
+int sum3 = sum1 / sum2;
+```
+---
+
+```
+In the example above, the result of the division equation will be a whole number, 
+as int is used as the data type. You can use double to retrieve a value with a decimal point.
+```
 
 ---
