--- a/JAVA/DOC/SL/01/0105/010504/010504.MD
+++ b/JAVA/DOC/SL/01/0105/010504/010504.MD
@@ -8,3 +8,19 @@
 ### 01.05.04 - Modulo
 
 ---
+
+```java
+The modulo (or remainder) math operation performs an integer division of one value by another,
+and returns the remainder of that division. 
+The operator for the modulo operation is the percentage (%) character.
+
+int value = 23;
+int res = value % 6; // res is 5
+```
+
+```
+Dividing 23 by 6 returns a quotient of 3, with a remainder of 5. 
+Thus, the value of 5 is assigned to the res variable.
+```
+
+---
