--- a/JAVA/DOC/SL/01/0102/010201/010201.MD
+++ b/JAVA/DOC/SL/01/0102/010201/010201.MD
@@ -33,10 +33,11 @@ and static will also be explained later.
 
 ---
 
->As a summary:
->- Every program in Java must have a **class**.
->- Every Java program starts from the **main** method.
-
+```
+As a summary:
+ - Every program in Java must have a class.
+ - Every Java program starts from the main method.
+```
 ---
 
 [01.02.02 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0102/010202/010202.MD)
