--- a/JAVA/DOC/SL/01/0102/010202/010202.MD
+++ b/JAVA/DOC/SL/01/0102/010202/010202.MD
@@ -20,9 +20,18 @@ public static void main(String[ ] args)
 - main: the name of the method
 ```
 
->The method's parameters are declared inside the parentheses 
+```
+The method's parameters are declared inside the parentheses 
 that follow the name of the method. 
->For main, it's an array of strings called args. 
+For main, it's an array of strings called args. 
 We will use it in our next lesson, so don't worry if you don't understand it all now.
+```
+
+---
+
+[<<< 01.02.02](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0102/010201/010201.MD) |
+[01.02.02 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0102/010203/010203.MD)
+
+---
 
 ---
