--- a/JAVA/DOC/SL/01/0102/010203/010203.MD
+++ b/JAVA/DOC/SL/01/0102/010203/010203.MD
@@ -20,6 +20,13 @@ The println method prints a line of text to the screen.
 The System class and its out stream are used to access the println method.
 ```
 
-> In classes, methods, and other flow-control structures code is always enclosed in curly braces { }.
+```java
+In classes, methods, and other flow-control structures code is always enclosed in curly braces { }.
+```
+
+---
+
+[<<< 01.02.02](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0102/010202/010202.MD) |
+[01.02.04 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0102/010204/010204.MD)
 
 ---
