--- a/JAVA/DOC/SL/01/0102/010204/010204.MD
+++ b/JAVA/DOC/SL/01/0102/010204/010204.MD
@@ -10,12 +10,20 @@
 ---
 
 ```java
-class MyClass {
+public class MyClass {
   public static void main(String[ ] args) {
     System.out.println("I am learning Java");
   }
 }
+
+>>>
+I am learning Java
+>>>
 ```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
 
 ```java
 In Java, each code statement must end with a semicolon.
