--- a/JAVA/DOC/SL/01/0103/010301/010301.MD
+++ b/JAVA/DOC/SL/01/0103/010301/010301.MD
@@ -19,11 +19,18 @@ A single-line comment starts with two forward slashes and continues until it rea
 ---
 
 ```java
-// this is a single-line comment
-x = 5; // a single-line comment after code
+public class MyClass {
+  public static void main(String[ ] args) {
+      
+    // this is a single-line comment
+    int x = 5; // a single-line comment after code  
+    
+    System.out.println(x);
+  }
+}
 
 >>>
-
+5
 >>>
 ```
 
