--- a/JAVA/DOC/SL/01/0103/010302/010302.MD
+++ b/JAVA/DOC/SL/01/0103/010302/010302.MD
@@ -16,12 +16,20 @@ and end it with an asterisk followed by a forward slash.
 ```
 
 ```java
-/*  This is also a
+public class MyClass {
+  public static void main(String[ ] args) {
+    
+    /*  This is also a
     comment spanning
     multiple lines */
+    int x = 10; 
+    
+    System.out.println(x);
+  }
+}
     
 >>>
-
+10
 >>>
 ```
 
