--- a/JAVA/DOC/SL/01/0103/010303/010303.MD
+++ b/JAVA/DOC/SL/01/0103/010303/010303.MD
@@ -17,13 +17,21 @@ followed by a forward slash.
 ```
 
 ```java
-/** This is a documentation comment */
+public class MyClass {
+  public static void main(String[ ] args) {
+    
+    /** This is a documentation comment */
 
-/** This is also a
+    /** This is also a
     documentation comment */
+    int x = 20; 
+    
+    System.out.println(x);
+  }
+}
     
 >>>
-
+20
 >>>
 ```
 
