--- a/JAVA/DOC/SL/01/0104/010401/010401.MD
+++ b/JAVA/DOC/SL/01/0104/010401/010401.MD
@@ -26,10 +26,17 @@ You can declare a variable of a type and assign it a value.
 ```
 
 ```java
-String name = "David";
+public class MyClass {
+  public static void main(String[ ] args) {
+    
+    String name = "David";
+
+    System.out.println(name);
+  }
+}
 
 >>>
-
+David
 >>>
 ```
 
