--- a/JAVA/DOC/SL/01/0104/010402/010402.MD
+++ b/JAVA/DOC/SL/01/0104/010402/010402.MD
@@ -49,9 +49,27 @@ boolean online = true;
 
 ```java
 You can use a comma-separated list to declare more than one variable of the specified type. 
-
-Example: int a = 42, b = 11;
 ```
+
+```java
+public class MyClass {
+  public static void main(String[ ] args) {
+    
+    int a = 42, b = 11;
+    
+    System.out.println(a);
+    System.out.println(b);
+
+  }
+}
+
+>>>
+42
+11
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
 
 ---
 
