--- a/JAVA/DOC/SL/01/0105/010502/010502.MD
+++ b/JAVA/DOC/SL/01/0105/010502/010502.MD
@@ -14,11 +14,31 @@ Addition
 ```java
 The + operator adds together two values, such as two constants, 
 a constant and a variable, or a variable and a variable.
-
-int sum1 = 50 + 10; 
-int sum2 = sum1 + 66; 
-int sum3 = sum2 + sum2;
 ```
+
+```java
+public class MyClass {
+  public static void main(String[ ] args) {
+    
+    int sum1 = 50 + 10; 
+    int sum2 = sum1 + 66; 
+    int sum3 = sum2 + sum2;    
+    
+    System.out.println(sum1);
+    System.out.println(sum2);
+    System.out.println(sum3);
+    
+  }
+}
+
+>>>
+60
+126
+252
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
 
 ---
 
@@ -26,9 +46,34 @@ Subtraction
 
 ```java
 The - operator subtracts one value from another.
-
-int sum1 = 1000 - 10;
-int sum2 = sum1 - 5;
-int sum3 = sum1 - sum2;
 ```
+
+```javapublic class MyClass {
+  public static void main(String[ ] args) {
+    
+    int sum1 = 1000 - 10;
+    int sum2 = sum1 - 5;
+    int sum3 = sum1 - sum2;    
+    
+    System.out.println(sum1);
+    System.out.println(sum2);
+    System.out.println(sum3);
+    
+  }
+}
+
+>>>
+990
+985
+5
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php]
+
+---
+
+[<<< 01.05.01](https://github.com/ttltrk/PRG/edit/master/JAVA/DOC/SL/01/0105/010501/010501.MD) |
+[01.05.03 >>>](https://github.com/ttltrk/PRG/edit/master/JAVA/DOC/SL/01/0105/010503/010503.MD)
+
 ---
