--- a/JAVA/DOC/SL/01/0105/010502/010502.MD
+++ b/JAVA/DOC/SL/01/0105/010502/010502.MD
@@ -48,7 +48,8 @@ Subtraction
 The - operator subtracts one value from another.
 ```
 
-```javapublic class MyClass {
+```java
+public class MyClass {
   public static void main(String[ ] args) {
     
     int sum1 = 1000 - 10;
