--- a/JAVA/DOC/SL/01/0105/010502/010502.MD
+++ b/JAVA/DOC/SL/01/0105/010502/010502.MD
@@ -70,7 +70,7 @@ public class MyClass {
 >>>
 ```
 
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php]
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
 
 ---
 
