--- a/JAVA/DOC/SL/01/0105/010503/010503.MD
+++ b/JAVA/DOC/SL/01/0105/010503/010503.MD
@@ -13,11 +13,31 @@ Multiplication
 
 ```java
 The * operator multiplies two values.
-
-int sum1 = 1000 * 2;
-int sum2 = sum1 * 10;
-int sum3 = sum1 * sum2;
 ```
+
+```java
+public class MyClass {
+  public static void main(String[ ] args) {
+    
+    int sum1 = 1000 * 2;
+    int sum2 = sum1 * 10;
+    int sum3 = sum1 * sum2;   
+    
+    System.out.println(sum1);
+    System.out.println(sum2);
+    System.out.println(sum3);
+    
+  }
+}
+
+>>>
+2000
+20000
+40000000
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
 
 ---
 
@@ -25,16 +45,42 @@ Division
 
 ```java
 The / operator divides one value by another.
-
-int sum1 = 1000 / 5;
-int sum2 = sum1 / 2;
-int sum3 = sum1 / sum2;
 ```
+
+```java
+public class MyClass {
+  public static void main(String[ ] args) {
+    
+    int sum1 = 1000 / 5;
+    int sum2 = sum1 / 2;
+    int sum3 = sum1 / sum2;  
+    
+    System.out.println(sum1);
+    System.out.println(sum2);
+    System.out.println(sum3);
+    
+  }
+}
+
+>>>
+200
+100
+2
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
 ---
 
 ```
 In the example above, the result of the division equation will be a whole number, 
 as int is used as the data type. You can use double to retrieve a value with a decimal point.
 ```
+
+---
+
+[<<< 01.05.02](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0105/010502/010502.MD) |
+[01.05.04 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0105/010504/010504.MD)
 
 ---
