--- a/JAVA/DOC/SL/01/0105/010504/010504.MD
+++ b/JAVA/DOC/SL/01/0105/010504/010504.MD
@@ -13,14 +13,46 @@
 The modulo (or remainder) math operation performs an integer division of one value by another,
 and returns the remainder of that division. 
 The operator for the modulo operation is the percentage (%) character.
-
-int value = 23;
-int res = value % 6; // res is 5
 ```
+
+```java
+public class MyClass {
+  public static void main(String[ ] args) {
+    
+    int val1 = 23;
+    int val2 = 75;
+    int val3 = 19;
+    
+    int res1 = val1 % 6; 
+    int res2 = val2 % 15;
+    int res3 = val3 % 3;
+    
+    
+    System.out.println(res1);
+    System.out.println(res2);
+    System.out.println(res3);
+    
+  }
+}
+
+>>>
+5
+0
+1
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
 
 ```
 Dividing 23 by 6 returns a quotient of 3, with a remainder of 5. 
 Thus, the value of 5 is assigned to the res variable.
 ```
+
+---
+
+[<<< 01.05.03](https://github.com/ttltrk/PRG/edit/master/JAVA/DOC/SL/01/0105/010503/010503.MD)
 
 ---
