--- a/JAVA/DOC/SL/01/0106/0106.MD
+++ b/JAVA/DOC/SL/01/0106/0106.MD
@@ -9,57 +9,9 @@
 
 ---
 
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+* [01.06.01 - Increment Operators](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0106/010601/010601.MD)
+* [01.06.02 - Prefix & Postfix](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0106/010602/010602.MD)
+* [01.06.03 - Assignment Operators](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0106/010603/010603.MD)
 
 ---
 
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
