--- a/JAVA/DOC/SL/01/0106/010601/010601.MD
+++ b/JAVA/DOC/SL/01/0106/010601/010601.MD
@@ -5,6 +5,42 @@
 
 ---
 
-### 01.06.01 -
+### 01.06.01 - Increment Operators
+
+---
+
+```
+An increment or decrement operator provides a more convenient and compact way 
+to increase or decrease the value of a variable by one. 
+For example, the statement x=x+1; can be simplified to ++x; 
+```
+
+```
+The decrement operator (--) is used to decrease the value of a variable by one.
+```
+
+---
+
+```java
+public class HelloWorld{
+     public static void main(String []args){
+         
+        int test1 = 5;
+        int test2 = 5;
+        
+        ++test1; 
+        --test2;
+        
+        System.out.println(test1);
+        System.out.println(test2);
+
+     }
+}
+
+>>>
+6
+4
+>>>
+```
 
 ---
