--- a/JAVA/DOC/SL/01/0106/010602/010602.MD
+++ b/JAVA/DOC/SL/01/0106/010602/010602.MD
@@ -5,6 +5,47 @@
 
 ---
 
-### 01.06.02 - MD
+### 01.06.02 - Prefix & Postfix
+
+---
+
+```
+Two forms, prefix and postfix, may be used with both 
+the increment and decrement operators.
+With prefix form, the operator appears before the operand, 
+while in postfix form, the operator appears after the operand. 
+Below is an explanation of how the two forms work:
+Prefix: Increments the variable's value and uses the new value in the expression. 
+```
+
+```
+The value of x is first incremented to 35, and is then assigned to y, 
+so the values of both x and y are now 35.
+Postfix: The variable's value is first used in the expression and is then increased. 
+```
+
+---
+
+```java
+public class HelloWorld{
+     public static void main(String []args){
+         
+        int a = 34;
+        int c = 34;
+        
+        int b = a++;
+        int d = ++c;
+        
+        System.out.println(b);
+        System.out.println(d);
+
+     }
+}
+
+>>>
+34
+35
+>>>
+```
 
 ---
