--- a/JAVA/DOC/SL/01/0106/010603/010603.MD
+++ b/JAVA/DOC/SL/01/0106/010603/010603.MD
@@ -5,6 +5,45 @@
 
 ---
 
-### 01.06.03 - 
+### 01.06.03 - Assignment Operators
+
+---
+
+```
+Java provides a number of assignment operators to make it easier to write code.
+Addition and assignment (+=)
+
+
+Subtraction and assignment (-=)
+
+Similarly, Java supports multiplication and assignment (*=), 
+division and assignment (/=), and remainder and assignment (%=)
+```
+
+---
+
+```java
+public class HelloWorld{
+     public static void main(String []args){
+         
+        int num1 = 4;
+        int num2 = 8;
+        int num3 = 4;
+        int num4 = 8;
+
+        num2 += num1;
+        num4 -= num3;
+        
+        System.out.println(num2);
+        System.out.println(num4);
+
+     }
+}
+
+>>>
+12
+4
+>>>
+```
 
 ---
