--- a/JAVA/DOC/SL/01/0107/0107.MD
+++ b/JAVA/DOC/SL/01/0107/0107.MD
@@ -9,57 +9,7 @@
 
 ---
 
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+* [01.07.01 - String](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0107/010701/010701.MD)
+* [01.07.02 - String Concatenation](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0107/010702/010702.MD)
 
 ---
