--- a/JAVA/DOC/SL/01/0107/010701/010701.MD
+++ b/JAVA/DOC/SL/01/0107/010701/010701.MD
@@ -8,3 +8,26 @@
 ### 01.07.01 - String
 
 ---
+
+```
+A String is an object that represents a sequence of characters.
+For example, "Hello" is a string of 5 characters.
+```
+
+```java
+public class HelloWorld{
+
+     public static void main(String []args){
+         
+        String s = "hey"; 
+ 
+        System.out.println(s);
+     }
+}
+
+>>>
+hey
+>>>
+```
+
+---
