--- a/JAVA/DOC/SL/01/0107/010702/010702.MD
+++ b/JAVA/DOC/SL/01/0107/010702/010702.MD
@@ -8,3 +8,33 @@
 ### 01.07.02 - String Concatenation
 
 ---
+
+```
+The + (plus) operator between strings adds them together to make a new string. 
+This process is called concatenation.
+The resulted string is the first string put together with the second string.
+```
+
+```java
+public class HelloWorld{
+
+     public static void main(String []args){
+         
+        String firstName, lastName;
+        firstName = "ttl";
+        lastName = "trk";
+
+        System.out.println("My name is " + firstName +" "+lastName);
+     }
+}
+
+>>>
+My name is ttl trk
+>>>
+```
+
+```
+The char data type represents a single character.
+```
+
+---
