--- a/PY/DOC/C_SOLO/01/0101/0101.MD
+++ b/PY/DOC/C_SOLO/01/0101/0101.MD
@@ -9,7 +9,7 @@
 
 ---
 
-* [01.01.01 - Welcome to Python! 1]()
-* [01.01.02 - Welcome to Python! 2]()
+* [01.01.01 - Welcome to Python! 1](https://github.com/ttltrk/PRG/blob/master/PY/DOC/C_SOLO/01/0101/010101/010101.MD)
+* [01.01.02 - Welcome to Python! 2](https://github.com/ttltrk/PRG/blob/master/PY/DOC/C_SOLO/01/0101/010102/010102.MD)
 
 ---
