--- a/PY/DOC/C_SOLO/01/0101/010101/010101.MD
+++ b/PY/DOC/C_SOLO/01/0101/010101/010101.MD
@@ -8,3 +8,10 @@
 ### 01.01.01 - Welcome to Python! 2
 
 ---
+
+Python is a high-level programming language, with applications in numerous areas, including web programming, scripting, scientific computing, and artificial intelligence.
+
+It is very popular and used by organizations such as Google, NASA, the CIA, and Disney.
+Python is processed at runtime by the interpreter. There is no need to compile your program before executing it.
+
+---
