--- a/PY/DOC/C_SOLO/01/0101/010102/010102.MD
+++ b/PY/DOC/C_SOLO/01/0101/010102/010102.MD
@@ -8,3 +8,14 @@
 ### 01.01.02 - Welcome to Python! 2
 
 ---
+
+The three major versions of Python are 1.x, 2.x and 3.x. These are subdivided into minor versions, such as 2.7 and 3.3.
+Code written for Python 3.x is guaranteed to work in all future versions. 
+Both Python Version 2.x and 3.x are used currently. 
+This course covers Python 3.x, but it isn't hard to change from one version to another.
+
+Python has several different implementations, written in various languages. 
+The version used in this course, CPython, is the most popular by far.
+An interpreter is a program that runs scripts written in an interpreted language such as Python.
+
+---
